add animation fill mode

--- a/portfolio/layouts/partials/nav.html
+++ b/portfolio/layouts/partials/nav.html
@@ -21,10 +21,10 @@
 </header>
 <header id="header-primary" class="w3-hide-small w3-animate-top" style="position: relative;">
     <div class="nav-bg-img-wrapper">
-        <img src="/images/about/bricks-red.jpg" alt="">
+        <img src="/images/about/bricks-red.webp" alt="">
     </div>
     <nav class="w3-content w3-center">
-        <ul class="w3-bar ">
+        <ul class="w3-bar">
             <li class="w3-bar-item">
                 <!-- TODO: active item is red -->
                 <a onmouseenter="navMouseEntered()" onmouseleave="navMouseLeft()" class="text-bold w3-button w3-hover-none nav-item 
