--- a/portfolio/static/desktop.css
+++ b/portfolio/static/desktop.css
@@ -24,6 +24,9 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
+    transition-property: opacity;
+    transition-duration: 0.25s;
+    transition-timing-function: cubic-bezier();
 }
 
 .nav-item:hover {
@@ -32,7 +35,6 @@
 }
 
 .nav-item {
-    /* border-bottom-color: hsl(120, 2%, 5%); */
     border-bottom: 6px solid #4a4a4a !important;
     color: #4a4a4a;
 }
@@ -47,10 +49,9 @@
     opacity: 0.45 !important;
 }
 
-.nav-bg-img-wrapper img {
-    transition-property: opacity;
-    transition-duration: 0.25s;
-    transition-timing-function: cubic-bezier();
+#header-primary {
+    animation-fill-mode: backwards;
+    animation-delay: 0.35s;
 }
 
 /* ------------------------------ bookmark side ----------------------------- */
@@ -69,6 +70,8 @@
     /* opacity: 0.75; */
     filter: opacity(75%);
     animation-duration: 0.5s;
+    animation-delay: 0.15s;
+    animation-fill-mode: backwards ;
 }
 
 /* ------------------------------ about section ----------------------------- */
