--- a/portfolio/static/desktop.css
+++ b/portfolio/static/desktop.css
@@ -68,7 +68,7 @@
     width: 100%;
     height: 100%;
     /* opacity: 0.75; */
-    filter: opacity(75%);
+    filter: opacity(75%) saturate(80%);
     animation-duration: 0.5s;
     animation-delay: 0.15s;
     animation-fill-mode: backwards ;
