--- a/portfolio/static/desktop.css
+++ b/portfolio/static/desktop.css
@@ -127,6 +127,8 @@
     height: 100%;
     width: 100%;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    overflow: hidden;
 }
 
 .card:hover {
@@ -268,5 +270,5 @@ footer {
 }
 
 footer small {
-    color: rgba(255, 255, 255, 0.25);
+    color: rgba(255, 255, 255, 0.5);
 }
