style mobile header

--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -5,10 +5,12 @@
 </div>
 
 
-<section id="about" class="w3-padding-top-48">
+<section id="about">
+    <div class="w3-padding-top-48 w3-hide-small"></div>
     <div id="mobile-img-about" class="w3-hide-medium w3-hide-large">
-        <img class="w3-mobile w3-amber" src="" alt="">
+        <img class="w3-mobile w3-amber" src="/images/about/color-blocks.webp" alt="">
     </div>
+    <div class="w3-padding-top-24 w3-hide-medium w3-hide-large"> </div>
     <div class="w3-container w3-content w3-section">
         <div class="w3-row">
             <div id="about-text" class="w3-col m6">
