--- a/portfolio/layouts/partials/nav.html
+++ b/portfolio/layouts/partials/nav.html
@@ -13,9 +13,11 @@
 </div>
 <header id="header-mobile" class="w3-hide-medium w3-hide-large">
     <nav id="mobile-nav" class="w3-top">
-        <div class="w3-topbar w3-border-black w3-display-container w3-container">
-            <h1>{{.Params.Title}}</h1>
-            <button class="w3-button w3-display-right w3-margin-right" onclick="toggleSidebarNav()"><i class="fa-solid fa-bars w3-xxlarge"></i></button>
+        <div class="w3-topbar w3-border-black w3-cell-row w3-container">
+            <h1 class="w3-cell w3-cell-middle">{{.Params.Title}}</h1>
+            <div class="w3-cell w3-cell-middle w3-right-align menu-btn">
+                <button class="w3-button " onclick="toggleSidebarNav()"><i class="fa-solid fa-bars w3-xxlarge"></i></button>
+            </div>
         </div>
     </nav>
 </header>
