--- a/portfolio/layouts/projects/single.html
+++ b/portfolio/layouts/projects/single.html
@@ -2,8 +2,10 @@
 <section class="single-project w3-content w3-section w3-padding">
     <h1>{{.Title}}</h1>
     <div class="project-details">
-        {{with index .Params.github 0}}
-        <a target="_blank" href="{{.}}">github</a>
+        {{with .Params.github}}
+            {{with index . 0}}
+            <a target="_blank" href="{{.}}">github</a>
+            {{end}}
         {{end}}
         {{with .Params.websiteUrl}}
         <a target="_blank" href="{{.}}">{{.}}</a>
