style contacts page on mobile

--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -81,11 +81,12 @@
 
 <section id="contact" class="w3-content w3-padding-top-48 w3-padding-48">
     <div class="contact-container">
+        <img src="images/contact/carton-bg1.jpg" class="bg-img"></img>
         <div class="contact-img-wrapper">
             <img src="/images/about/bkamnik-profile.jpg" alt="" />
         </div>
         <div class="contact-details">
-            <img src="/images/about/red-n-orange.jpg" alt="" class="contact-bg">
+            <!-- <img src="/images/about/red-n-orange.jpg" alt="" class="contact-bg"> -->
             <div class="contact-text-wrapper">
                 <h2>let's work together !</h2>
                 <p class="contact-details-item">
@@ -96,7 +97,7 @@
                     <i class="fa-solid fa-envelope w3-xlarge"></i>
                     <span class="w3-large">mkamnikbostjan@gmail.com</span>
                 </p>
-                <hr class="w3-opacity-max"/>
+                <hr class="w3-opacity-max w3-border-black"/>
                 <div class="contact-details-social">
                     <a href="" class="w3-btn"> <i class="fa-brands fa-linkedin w3-xxlarge"></i>
                     </a>
