--- a/portfolio/static/mobile.css
+++ b/portfolio/static/mobile.css
@@ -1,13 +1,13 @@
-#mobile-nav > div{
+#mobile-nav>div {
     background-color: #d84755;
     color: white;
     height: 95px;
     padding-right: 8;
 }
 
-#header-mobile:after{
+#header-mobile:after {
     display: block;
-    content: '';    
+    content: '';
     margin-top: 95px;
 }
 
@@ -25,7 +25,7 @@
 }
 
 /* ---------------------------------- about --------------------------------- */
-#mobile-img-about img{
+#mobile-img-about img {
     height: 100px;
     /* transform: rotateZ(90deg); */
     object-fit: cover;
@@ -52,26 +52,80 @@
     transform: translateY(0px);
 }
 
-.nav-up{
+.nav-up {
     display: none;
 }
 
-.nav-down{
+.nav-down {
     display: block;
 }
 
+/* --------------------------------- contact -------------------------------- */
 
+
+.contact-container {
+    background-color: hsl(51.8, 89.8%, 49.8%);
+    position: relative;
+    padding: 24px;
+}
+
+.contact-container .bg-img{
+    background-image: url('images/contact/carton-bg1.jpg');
+    width: 100%;
+    height: 100%;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    filter: brightness(100%);
+    opacity: 0.4;
+}
+
+.contact-img-wrapper {
+    flex-basis: 100%;
+    /* flex-grow: 1; */
+    /* flex-shrink: 0; */
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.contact-img-wrapper img {
+    z-index: 1;
+    margin: 0 auto;
+    height: 200px;
+    width: 200px;
+    border-radius: 4px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    object-fit: cover;
+}
+
+.contact-details {
+    flex-basis: 100%;
+    /* flex-grow: 1; */
+    /* flex-shrink: 0; */
+}
+
+.contact-details h2{
+    color: black;
+}
+
+.contact-details-social{
+    justify-content: center;
+}
 /* --------------------------- single project page -------------------------- */
 
 
-.single-project img{
+.single-project img {
     max-width: 100%;
     margin: 0 auto;
     padding-bottom: 30px;
 }
 
 /* TODO: fix video */
-#player-wrapper video{
+#player-wrapper video {
     width: 100%;
     margin: 0px -32px;
 }
