--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -52,8 +52,10 @@
     </div>
 </section>
 
-<section id="portfolio" class="w3-padding-top-48">
+<div class="w3-padding-top-48 w3-hide-small"></div>
+<section id="portfolio">
     <div class="w3-container w3-content w3-section">
+        <h2 class="w3-hide-medium w3-hide-large">Projects</h2>
         <div class="w3-cell-row">
             {{ range first .Site.Params.featuredProjectsCount (where .Site.RegularPages "Type" "projects") }}
             <div class="portfolio-item translate-vertical w3-col m6 l4">
@@ -79,7 +81,7 @@
 </div>
 {{end}}
 
-<section id="contact" class="w3-content w3-padding-top-48 w3-padding-48">
+<section id="contact" class="w3-content w3-padding-top-48">
     <div class="contact-container">
         <img src="images/contact/carton-bg1.jpg" class="bg-img"></img>
         <div class="contact-img-wrapper">
@@ -106,5 +108,6 @@
         </div>
     </div>
 </section>
+<div class="w3-padding-top-48 w3-hide-small"></div>
 
 {{end}}
