resize carton bg img and update style on desktip

--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -83,7 +83,7 @@
 
 <section id="contact" class="w3-content w3-padding-top-48">
     <div class="contact-container">
-        <img src="images/contact/carton-bg1.jpg" class="bg-img"></img>
+        <img src="images/contact/carton-bg3.webp" class="bg-img"></img>
         <div class="contact-img-wrapper">
             <img src="/images/about/bkamnik-profile.jpg" alt="" />
         </div>
