--- a/portfolio/static/desktop.css
+++ b/portfolio/static/desktop.css
@@ -179,6 +179,10 @@
     overflow: hidden;
     border-radius: 4px;
     flex-wrap: wrap;
+
+    background-color: rgb(255, 228, 50);
+    position: relative;
+    z-index: -2;
 }
 
 .contact-img-wrapper {
@@ -188,6 +192,7 @@
 .contact-img-wrapper img {
     height: 350px;
     width: 100%;
+    z-index: 1;
     object-fit: cover;
 }
 
@@ -196,6 +201,7 @@
     display: flex;
     flex-basis: 65%;
     justify-content: center;
+    margin-top: 8px;
 }
 
 .contact-details .contact-bg {
@@ -207,9 +213,23 @@
     right: 0;
     object-fit: cover;
 }
+.contact-container .bg-img{
+    width: 100%;
+    height: 100%;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    filter: brightness(100%);
+    opacity: 0.35;
+}
+
+
+
 
 .contact-details h2 {
-    color: hsl(26, 43%, 100%);
+    color: black;
     font-weight: 600;
 }
 
