--- a/portfolio/layouts/_default/baseof.html
+++ b/portfolio/layouts/_default/baseof.html
@@ -3,9 +3,11 @@
 {{- partial "header.html" . -}}
 
 <body>
-    {{- partial "nav.html" . -}}
-    <main>{{- block "main" . }}{{- end }}
-    </main>    
+    <div class="page-wrap">
+        {{- partial "nav.html" . -}}
+        <main>{{- block "main" . }}{{- end }}
+        </main>        
+    </div>
     {{- partial "footer.html" . -}}
 
     <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
