--- a/portfolio/layouts/partials/nav.html
+++ b/portfolio/layouts/partials/nav.html
@@ -1,10 +1,9 @@
 <!-- {{ printf "%#v" .Title }} -->
 <div id="navSidebar" class="w3-sidebar w3-bar-block w3-black w3-center w3-padding w3-topbar w3-hide w3-animate-left">
-    <button onclick="toggleSidebarNav()" class="w3-button w3-xlarge w3-right">&times;</button>
-    <div class="w3-padding-top-64 w3-margin-top">
+    <div class="w3-padding-top-32 w3-margin-top">
         <a href="/" class="w3-bar-item w3-button w3-xlarge">home</a>
     </div>
-    <div class="w3-padding-top-64 w3-margin-top">
+    <div class="w3-margin-top">
         <a href="/projects" class="w3-bar-item w3-button w3-xlarge">projects</a>
     </div>
     <div class="w3-margin-top">
