--- a/portfolio/static/mobile.css
+++ b/portfolio/static/mobile.css
@@ -28,7 +28,9 @@
     z-index: 2;
     width: 100%;
 }
-
+#toggle-nav-mobile-btn i{
+    animation-duration: 0.25s;
+}
 .no-scroll{
     max-height: calc(100vh - var(--header-height));
     overflow-y: clip;
