--- a/portfolio/layouts/partials/nav.html
+++ b/portfolio/layouts/partials/nav.html
@@ -1,5 +1,5 @@
 <!-- {{ printf "%#v" .Title }} -->
-<div id="navSidebar" class="w3-sidebar w3-bar-block w3-black w3-center w3-padding w3-hide w3-animate-left">
+<div id="sidebar-mobile" class="w3-sidebar w3-bar-block w3-black w3-center w3-padding w3-hide w3-animate-left">
     <div class="w3-padding-top-32 w3-margin-top">
         <a href="/" class="w3-bar-item w3-button w3-xlarge">home</a>
     </div>
