--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -14,10 +14,19 @@
     <div class="w3-container w3-content w3-section">
         <div class="w3-row">
             <div id="about-text" class="w3-col m6">
-                <div class="web-dev-toggle-bookmark w3-animate-opacity">
+                <div class="web-dev-toggle-bookmark w3-animate-opacity w3-large">
                     <h2 class="no-space-top">Web Developer</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum voluptatibus esse nesciunt consectetur vero eligendi! Fugit, quisquam exercitationem non delectus natus rem! Hic quam quaerat non, obcaecati placeat necessitatibus est
-                        voluptatum voluptates quasi doloremque dignissimos maiores ipsa in labore, sint eius totam recusandae temporibus explicabo dolorem qui nostrum reiciendis dolore?</p>
+                    <strong>Hi !</strong>
+                    <p>
+                        Having worked with computers for the larger part of my life, I went on to learn programming at the Salzburg University of Applied Sciences</a>.
+                    </p>
+                    <p>
+                        Equipped with a positive attitude and a 'can do' mentality, I like to use my skills to be creative and build useful things. I like the idea of helping others fulfill their ambitions.
+                    </p>
+
+                    <p>
+                        below are some of the projects I've worked on 
+                    </p>
                 </div>
                 <!-- <div class="electronics-toggle-bookmark w3-animate-opacity w3-hide">
                     <h2>Electronics</h2>
@@ -99,7 +108,7 @@
                     <i class="fa-solid fa-envelope w3-xlarge"></i>
                     <span class="w3-large">mkamnikbostjan@gmail.com</span>
                 </p>
-                <hr class="w3-opacity-max w3-border-black"/>
+                <hr class="w3-opacity-max w3-border-black" />
                 <div class="contact-details-social">
                     <a href="" class="w3-btn"> <i class="fa-brands fa-linkedin w3-xxlarge"></i>
                     </a>
