--- a/portfolio/static/desktop.css
+++ b/portfolio/static/desktop.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;0,600;1,400&family=Jost:wght@300&family=Poiret+One&display=swap');
+
+h1,h2,h3,h4,h5,h6,p,a{
+    font-family: 'Barlow', sans-serif;
+}
+
 * {
     margin: 0;
 }
