adjust contact color

--- a/portfolio/static/desktop.css
+++ b/portfolio/static/desktop.css
@@ -195,7 +195,7 @@ body {
     border-radius: 4px;
     flex-wrap: wrap;
 
-    background-color: rgb(255, 228, 50);
+    background-color: rgba(255, 230, 66, 0.884);
     position: relative;
     z-index: -2;
 }
