--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -16,16 +16,16 @@
             <div id="about-text" class="w3-col m6">
                 <div class="web-dev-toggle-bookmark w3-animate-opacity w3-large">
                     <h2 class="no-space-top">Web Developer</h2>
+                    <br/>
                     <strong>Hi !</strong>
                     <p>
-                        Having worked with computers for the larger part of my life, I went on to learn programming at the Salzburg University of Applied Sciences</a>.
+                        Having worked with computers for the larger part of my life, starting with video games I eventually went on to study computer science, where I learned programming.
                     </p>
                     <p>
-                        Equipped with a positive attitude and a 'can do' mentality, I like to use my skills to be creative and build useful things. I like the idea of helping others fulfill their ambitions.
+                        Equipped with a positive attitude and a 'can do' mentality, I like to use my skills to be creative and build useful things. I like to help others fulfill their ambitions and reach their goals.
                     </p>
-
                     <p>
-                        below are some of the projects I've worked on 
+                        below are some of the projects I've worked on
                     </p>
                 </div>
                 <!-- <div class="electronics-toggle-bookmark w3-animate-opacity w3-hide">
