contact social btns can now be clicked

--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -92,6 +92,7 @@
 
 <section id="contact" class="w3-content w3-padding-top-48">
     <div class="contact-container">
+        <div class="bg-color"></div>
         <img src="images/contact/carton-bg3.webp" class="bg-img"></img>
         <div class="contact-img-wrapper">
             <img src="/images/about/bkamnik-profile.jpg" alt="" />
@@ -99,18 +100,18 @@
         <div class="contact-details">
             <!-- <img src="/images/about/red-n-orange.jpg" alt="" class="contact-bg"> -->
             <div class="contact-text-wrapper">
-                <h2>let's work together !</h2>
+                <h2 style="font-weight:700; letter-spacing: 0.1rem;">let's work together !</h2>
                 <p class="contact-details-item">
                     <i class="fa-solid fa-phone w3-xlarge"></i>
-                    <span class="w3-large">+386 40 976 333</span>
+                    <span>+386 40 976 333</span>
                 </p>
                 <p class="contact-details-item">
                     <i class="fa-solid fa-envelope w3-xlarge"></i>
-                    <span class="w3-large">mkamnikbostjan@gmail.com</span>
+                    <span>mkamnikbostjan@gmail.com</span>
                 </p>
                 <hr class="w3-opacity-max w3-border-black" />
                 <div class="contact-details-social">
-                    <a href="" class="w3-btn"> <i class="fa-brands fa-linkedin w3-xxlarge"></i>
+                    <a href="https://www.linkedin.com/in/bostjan-kamnik/" class="w3-btn"> <i class="fa-brands fa-linkedin w3-xxlarge"></i>
                     </a>
                 </div>
             </div>
