--- a/portfolio/static/desktop.css
+++ b/portfolio/static/desktop.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;0,600;1,400&family=Jost:wght@300&family=Poiret+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,900&family=Jost:wght@300&family=Poiret+One&display=swap');
 
 h1,h2,h3,h4,h5,h6,p,a{
     font-family: 'Barlow', sans-serif;
@@ -20,16 +20,6 @@ body {
 .no-space-top {
     margin-top: 0px;
     padding-top: 0px;
-}
-
-.btn-text{
-    background-color: transparent;
-    border: none;
-}
-
-.btn-text:hover{
-    color: white;
-    background-color: #202020;
 }
 
 /* ----------------------------------- nav ---------------------------------- */
@@ -145,7 +135,7 @@ body {
 .portfolio-item {
     padding: 0px 16px;
     margin: 16px 0;
-    height: 490px;
+    height: 510px;
 }
 
 .card {
@@ -176,6 +166,7 @@ body {
 
 .card-text-wrapper p {
     padding: 10px;
+    font-size: 1.2rem;
 }
 
 .translate-vertical:nth-child(3n - 2) {
@@ -204,10 +195,7 @@ body {
     overflow: hidden;
     border-radius: 4px;
     flex-wrap: wrap;
-
-    background-color: rgba(255, 230, 66, 0.884);
     position: relative;
-    z-index: -2;
 }
 
 .contact-img-wrapper {
@@ -217,7 +205,6 @@ body {
 .contact-img-wrapper img {
     height: 350px;
     width: 100%;
-    z-index: 1;
     object-fit: cover;
 }
 
@@ -230,7 +217,6 @@ body {
 }
 
 .contact-details .contact-bg {
-    z-index: -1;
     position: absolute;
     left: 0;
     top: 0;
@@ -246,21 +232,30 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: -1;
     filter: brightness(100%);
     opacity: 0.35;
+    z-index: -1;
 }
 
-
-
+.contact-container .bg-color{
+    background-color: rgba(255, 230, 66, 0.884);
+    position: absolute;
+    left: 0;
+    top:0;
+    right: 0;
+    bottom: 0;
+    z-index: -2;
+}
 
 .contact-details h2 {
     color: black;
     font-weight: 600;
+    font-size: 2rem;
 }
 
 .contact-details-item span {
-    margin-left: 8px;
+    margin-left: 14px;
+    font-size: 1.5rem;
     /* color: hsl(26, 43%, 100%); */
 }
 
