--- a/portfolio/layouts/partials/nav.html
+++ b/portfolio/layouts/partials/nav.html
@@ -1,4 +1,3 @@
-<!-- {{ printf "%#v" .Title }} -->
 <div id="sidebar-mobile" class="w3-sidebar w3-bar-block w3-black w3-center w3-padding w3-hide w3-animate-left">
     <div class="w3-padding-top-32 w3-margin-top">
         <a href="/" class="w3-bar-item w3-button w3-xlarge">home</a>
@@ -30,14 +29,14 @@
     <nav class="w3-content w3-center">
         <ul class="w3-bar">
             <li class="w3-bar-item">
-                <!-- TODO: active item is red -->
                 <a onmouseenter="navMouseEntered()" onmouseleave="navMouseLeft()" class="text-bold w3-button w3-hover-none nav-item 
                 {{if .Page.IsHome }} nav-item-active {{end}}" href="/">Boštjan Kamnik
                 </a>
             </li>
             <li class="w3-bar-item ">
                 <a onmouseenter="navMouseEntered()" onmouseleave="navMouseLeft()" class="text-bold w3-button w3-hover-none nav-item 
-                {{if .Page.IsSection }} nav-item-active {{end}}" href="/projects">projects</a>
+                {{if (in .Page.Permalink "projects") }} nav-item-active {{end}}" href="/projects">projects</a>
+            
             </li>
             <li class="w3-bar-item ">
                 <a onmouseenter="navMouseEntered()" onmouseleave="navMouseLeft()" class="text-bold w3-button w3-hover-none nav-item" href="/#contact">contact</a>
