update contact title

--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -100,7 +100,7 @@
         <div class="contact-details">
             <!-- <img src="/images/about/red-n-orange.jpg" alt="" class="contact-bg"> -->
             <div class="contact-text-wrapper">
-                <h2 style="font-weight:700; letter-spacing: 0.1rem;">let's work together !</h2>
+                <h2>let's work together !</h2>
                 <p class="contact-details-item">
                     <i class="fa-solid fa-phone w3-xlarge"></i>
                     <span>+386 40 976 333</span>
