--- a/portfolio/static/desktop.css
+++ b/portfolio/static/desktop.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,900&family=Jost:wght@300&family=Poiret+One&display=swap');
 
-h1,h2,h3,h4,h5,h6,p,a{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a {
     font-family: 'Barlow', sans-serif;
 }
 
@@ -237,11 +244,11 @@ body {
     z-index: -1;
 }
 
-.contact-container .bg-color{
+.contact-container .bg-color {
     background-color: rgba(255, 230, 66, 0.884);
     position: absolute;
     left: 0;
-    top:0;
+    top: 0;
     right: 0;
     bottom: 0;
     z-index: -2;
@@ -249,8 +256,9 @@ body {
 
 .contact-details h2 {
     color: black;
-    font-weight: 600;
     font-size: 2rem;
+    font-weight: 600;
+    letter-spacing: 0.1rem;
 }
 
 .contact-details-item span {
@@ -301,7 +309,7 @@ p {
 
 /* --------------------------------- footer --------------------------------- */
 
-:root{
+:root {
     --footer-height: 50px;
 }
 
