transform images and add alt text

--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -1,6 +1,6 @@
 {{define "main"}}
 <div id="bookmark-side">
-    <img src="/images/about/color-blocks.webp" alt="" class="web-dev-toggle-bookmark w3-animate-left">
+    <img src="/images/about/color-blocks.webp" alt="colorful blocks" class="web-dev-toggle-bookmark w3-animate-left">
     <!-- <img src="" alt="" class="electronics-toggle-bookmark w3-animate-left w3-animate-opacity w3-brown w3-hide"> -->
 </div>
 
@@ -8,7 +8,7 @@
 <section id="about">
     <div class="w3-padding-top-48 w3-hide-small"></div>
     <div id="mobile-img-about" class="w3-hide-medium w3-hide-large">
-        <img class="w3-mobile w3-amber" src="/images/about/color-blocks.webp" alt="">
+        <img class="w3-mobile w3-amber" src="/images/about/color-blocks.webp" alt="colorful blocks">
     </div>
     <div class="w3-padding-top-24 w3-hide-medium w3-hide-large"> </div>
     <div class="w3-container w3-content w3-section">
@@ -36,9 +36,9 @@
             </div>
             <div id="about-aside" class="w3-col m6 w3-hide-small">
                 <div class="img-wrapper">
-                    <img src="/images/about/laptop.jpg" alt="" class="img-about web-dev-toggle-bookmark w3-animate-opacity">
+                    <img src="/images/about/laptop.webp" alt="laptop displaying phrase" class="img-about web-dev-toggle-bookmark w3-animate-opacity">
                     <!-- <img src="" alt="" class="img-about w3-light-blue w3-hide electronics-toggle-bookmark w3-animate-opacity"> -->
-                    <img class="img-overlay-right" src="/images/decorative/paint-vert.png" alt="">
+                    <img class="img-overlay-right" src="/images/decorative/paint-vert.webp" alt="decorative overlay">
                 </div>
 
                 <!-- about section navigation in case of more items than 1 -->
@@ -93,9 +93,9 @@
 <section id="contact" class="w3-content w3-padding-top-48">
     <div class="contact-container">
         <div class="bg-color"></div>
-        <img src="images/contact/carton-bg3.webp" class="bg-img"></img>
+        <img src="images/contact/carton-bg3.webp" class="bg-img" alt="background overlay"></img>
         <div class="contact-img-wrapper">
-            <img src="/images/about/bkamnik-profile.jpg" alt="" />
+            <img src="/images/contact/bkamnik-profile.webp" alt="Boštjan kamnik profile" />
         </div>
         <div class="contact-details">
             <!-- <img src="/images/about/red-n-orange.jpg" alt="" class="contact-bg"> -->
