--- a/portfolio/static/desktop.css
+++ b/portfolio/static/desktop.css
@@ -143,11 +143,14 @@ body {
     padding: 0px 16px;
     margin: 16px 0;
     height: 510px;
+    display: flex;
+    justify-content: center;
 }
 
 .card {
     height: 100%;
-    width: 100%;
+    /* width: 100%; */
+    width: 283px;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     border-radius: 4px;
     overflow: hidden;
