--- a/portfolio/layouts/partials/header.html
+++ b/portfolio/layouts/partials/header.html
@@ -25,8 +25,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="/desktop.css">
-    <link rel="stylesheet" href="/tablet.css" media="screen and (min-width: 601px and max-width:993px)">
-    <link rel="stylesheet" href="/mobile.css" media="screen and (max-width:600px)">
+    <link rel="stylesheet" href="/tablet.css"  media="only screen and (max-width:993px)">
+    <link rel="stylesheet" href="/mobile.css" media="only screen and (max-width:600px)">
 
     <script src="/jquery.js"></script>
     <script src="/index.js"></script>
