--- a/portfolio/static/tablet.css
+++ b/portfolio/static/tablet.css
@@ -1,3 +1,4 @@
+
 #about{
     margin-left: 0px;
     padding: 0px 16px;
@@ -6,11 +7,22 @@
 #bookmark-side{
     display: none;
 }
-.portfolio-item:nth-child(2n - 1) {
+
+
+.translate-vertical:nth-child(3n - 2) {
+    transform: translateY();
+}
+
+.translate-vertical:nth-child(3n - 1) {
+    transform: translateY();
+}
+
+
+.translate-vertical:nth-child(2n - 1) {
     transform: translateY(80px);
 }
 
-.portfolio-item:nth-child(2n) {
+.translate-vertical:nth-child(2n) {
     transform: translateY(0px);
 }
 
