--- a/portfolio/static/desktop.css
+++ b/portfolio/static/desktop.css
@@ -150,7 +150,8 @@ body {
 .card {
     height: 100%;
     /* width: 100%; */
-    width: 283px;
+    width: 100%;
+    max-width: 350px;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     border-radius: 4px;
     overflow: hidden;
