update header nav colors and font family

--- a/static/desktop.css
+++ b/static/desktop.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,900&family=Jost:wght@300&family=Poiret+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Mulish&family=Jost&family=Poiret+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Karla&family=Muli&family=Ubuntu&family=Secular One&display=swap');
 
 h1,
 h2,
@@ -52,18 +53,20 @@ body {
 }
 
 .nav-item:hover {
-    color: hsl(26, 43%, 100%) !important;
-    border-bottom: 6px solid hsl(26, 43%, 100%) !important;
+    color: #4a4a4a;
+    border-bottom: 6px solid #4a4a4a !important;
 }
 
 .nav-item {
-    border-bottom: 6px solid #4a4a4a !important;
-    color: #4a4a4a;
+    border-bottom: 6px solid #4a4a4a3b !important;
+    color: #4a4a4a8a;
+    font-weight: 700;
+    font-family: 'Mulish', sans-serif;
 }
 
-.nav-item-active {
-    color: hsl(356, 100%, 45%);
-    border-bottom: 6px solid rgb(255, 196, 120) !important;
+.nav-item.nav-item-active {
+    color: #4a4a4a;
+    border-bottom: 6px solid #ffb602 !important;
 }
 
 .bg-focused {
@@ -244,13 +247,12 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    filter: brightness(100%);
     opacity: 0.35;
     z-index: -1;
 }
 
 .contact-container .bg-color {
-    background-color: rgba(255, 230, 66, 0.884);
+    background-color: #fdcb35;
     position: absolute;
     left: 0;
     top: 0;
@@ -304,6 +306,10 @@ h6,
 p {
     clear: left;
     padding-top: 16px;
+}
+
+p{
+    font-size: 18px;
 }
 
 .player-wrapper {
