add bg color nav item hover

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -29,17 +29,17 @@
     <nav class="w3-content w3-center">
         <ul class="w3-bar">
             <li class="w3-bar-item">
-                <a onmouseenter="navMouseEntered()" onmouseleave="navMouseLeft()" class="text-bold w3-button w3-hover-none nav-item 
+                <a onmouseenter="navMouseEntered()" onmouseleave="navMouseLeft()" class="text-bold w3-button nav-item 
                 {{if .Page.IsHome }} nav-item-active {{end}}" href="/">Boštjan Kamnik
                 </a>
             </li>
             <li class="w3-bar-item ">
-                <a onmouseenter="navMouseEntered()" onmouseleave="navMouseLeft()" class="text-bold w3-button w3-hover-none nav-item 
+                <a onmouseenter="navMouseEntered()" onmouseleave="navMouseLeft()" class="text-bold w3-button nav-item 
                 {{if (in .Page.Permalink "projects") }} nav-item-active {{end}}" href="/projects">projects</a>
             
             </li>
             <li class="w3-bar-item ">
-                <a onmouseenter="navMouseEntered()" onmouseleave="navMouseLeft()" class="text-bold w3-button w3-hover-none nav-item" href="/#contact">contact</a>
+                <a onmouseenter="navMouseEntered()" onmouseleave="navMouseLeft()" class="text-bold w3-button nav-item" href="/#contact">contact</a>
             </li>
         </ul>
     </nav>
