--- a/static/desktop.css
+++ b/static/desktop.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Mulish&family=Jost&family=Poiret+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Karla&family=Muli&family=Ubuntu&family=Secular One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Mulish&display=swap');
 
 h1,
 h2,
