--- a/static/desktop.css
+++ b/static/desktop.css
@@ -74,10 +74,26 @@ body {
     animation-delay: 0.35s;
 }
 
-nav ul li .nav-item:hover{
-    background-color: rgba(230, 230, 230, 0.4) !important;
+nav ul li .nav-item:hover {
+    background-color: transparent !important;
+
     color: #4a4a4a;
     border-bottom: 6px solid #4a4a4a !important;
+    position: relative;
+}
+
+nav ul li.w3-bar-item:hover .nav-item::before {
+    content: '';
+    display: block;
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    opacity: 0.75;
+    filter: blur(24px);
 }
 
 /* ------------------------------ bookmark side ----------------------------- */
