--- a/layouts/index.html
+++ b/layouts/index.html
@@ -66,7 +66,7 @@
     <div class="w3-container w3-content w3-section">
         <h2 class="w3-hide-medium w3-hide-large">Projects</h2>
         <div class="w3-cell-row">
-            {{ range first .Site.Params.featuredProjectsCount (where .Site.RegularPages "Type" "projects") }}
+            {{ range first .Site.Params.featuredProjectsCount (where .Site.RegularPages.ByDate.Reverse "Type" "projects") }}
             <div class="portfolio-item translate-vertical w3-col m6 l4">
                 <a href="{{.Permalink | relURL}}" class="link-plain-text">
                     <div class="card w3-center">
