--- a/layouts/projects/projects.html
+++ b/layouts/projects/projects.html
@@ -1,7 +1,7 @@
 {{define "main"}}
 
 <section class="w3-content w3-container w3-section w3-padding-top-24">
-    {{range .Pages}}
+    {{range .Pages.ByDate.Reverse}}
     <div class="portfolio-item w3-col m6 l4">
         <a href="{{.Permalink | relURL}}" class="link-plain-text">
             <div class="card w3-center">
