--- a/static/mobile.css
+++ b/static/mobile.css
@@ -1,125 +1,142 @@
 /* ----------------------------------- nav ---------------------------------- */
 
-:root{
-    --header-height: 95px;
+:root {
+  --header-height: 95px;
 }
-#mobile-nav>div {
-    background-color: #d84755;
-    color: white;
-    height: var(--header-height);
-    padding-right: 8;
+#mobile-nav > div {
+  background-color: #d84755;
+  color: white;
+  height: var(--header-height);
+  padding-right: 8;
 }
 
 #header-mobile:after {
-    display: block;
-    content: '';
-    margin-top: var(--header-height);
+  display: block;
+  content: "";
+  margin-top: var(--header-height);
 }
 
 #nav-menu-toggle {
-    position: fixed;
-    top: 0;
-    right: 0;
-    margin: 16px;
-    z-index: 1;
+  position: fixed;
+  top: 0;
+  right: 0;
+  margin: 16px;
+  z-index: 1;
 }
 
 #sidebar-mobile {
-    z-index: 2;
-    width: 100%;
+  z-index: 2;
+  width: 100%;
 }
-#toggle-nav-mobile-btn i{
-    animation-duration: 0.25s;
+#toggle-nav-mobile-btn i {
+  animation-duration: 0.25s;
 }
-.no-scroll{
-    max-height: calc(100vh - var(--header-height));
-    overflow-y: clip;
+.no-scroll {
+  max-height: calc(100vh - var(--header-height));
+  overflow-y: clip;
 }
 /* ---------------------------------- about --------------------------------- */
 #mobile-img-about img {
-    height: 100px;
-    /* transform: rotateZ(90deg); */
-    object-fit: cover;
-    filter: opacity(75%) saturate(80%);
+  height: 100px;
+  /* transform: rotateZ(90deg); */
+  object-fit: cover;
+  filter: opacity(75%) saturate(80%);
 }
 
 #about {
-    margin-left: 0px;
+  margin-left: 0px;
 }
 
 #bookmark-side {
-    display: none;
+  display: none;
 }
 
 .portfolio-item:nth-child(n) {
-    transform: translateY(0px);
+  transform: translateY(0px);
 }
 
 #portfolio::after {
-    margin-top: 0px;
+  margin-top: 0px;
 }
 
 .portfolio-item:nth-child(n) {
-    transform: translateY(0px);
+  transform: translateY(0px);
 }
 
 .nav-up {
-    display: none;
+  display: none;
 }
 
 .nav-down {
-    display: block;
+  display: block;
 }
 
 /* --------------------------------- contact -------------------------------- */
 
-.contact-container{
-    padding: 24px;
+.contact-container {
+  padding: 24px;
 }
 
 .contact-img-wrapper {
-    flex-basis: 100%;
-    /* flex-grow: 1; */
-    /* flex-shrink: 0; */
-    display: flex;
-    justify-content: center;
-    overflow: hidden;
+  flex-basis: 100%;
+  /* flex-grow: 1; */
+  /* flex-shrink: 0; */
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
 }
 
 .contact-img-wrapper img {
-    margin: 0 auto;
-    height: 200px;
-    width: 200px;
-    border-radius: 4px;
-    border-bottom-left-radius: 0px;
-    border-bottom-right-radius: 0px;
-    object-fit: cover;
+  margin: 0 auto;
+  height: 200px;
+  width: 200px;
+  border-radius: 4px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  object-fit: cover;
 }
 
 .contact-details {
-    flex-basis: 100%;
-    /* flex-grow: 1; */
-    /* flex-shrink: 0; */
+  flex-basis: 100%;
+  /* flex-grow: 1; */
+  /* flex-shrink: 0; */
 }
 
-.contact-details h2{
-    color: black;
+.contact-details h2 {
+  color: black;
 }
 
-.contact-details-social{
-    justify-content: center;
+.contact-details-social {
+  justify-content: center;
 }
 /* --------------------------- single project page -------------------------- */
 
-
 .single-project img {
-    max-width: 100%;
-    margin: 0 auto;
-    padding-bottom: 30px;
+  max-width: 100%;
+  margin: 0 auto;
+  padding-bottom: 30px;
 }
 
 /* TODO: fix video */
 #player-wrapper video {
-    width: 100%;
-    margin: 0px -32px;
+  width: 100%;
+  margin: 0px -32px;
+}
+
+.c-screenshot {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 24px;
+}
+
+.c-screenshot figcaption {
+  font-size: 14px;
+  color: #4a4a4a;
+  align-self: flex-start;
+  font-weight: bold;
+}
+.c-screenshot figcaption p {
+  padding: 0;
 }
