--- a/static/mobile.css
+++ b/static/mobile.css
@@ -123,20 +123,6 @@
   margin: 0px -32px;
 }
 
-.c-screenshot {
-  display: flex;
-  flex-direction: column-reverse;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 24px;
-}
-
-.c-screenshot figcaption {
-  font-size: 14px;
-  color: #4a4a4a;
-  align-self: flex-start;
-  font-weight: bold;
-}
-.c-screenshot figcaption p {
-  padding: 0;
-}
+figure.c-screenshot > figcaption {
+    margin-bottom: 8px;
+  }
