--- a/layouts/index.html
+++ b/layouts/index.html
@@ -107,7 +107,7 @@
                 </p>
                 <p class="contact-details-item">
                     <i class="fa-solid fa-envelope w3-xlarge"></i>
-                    <span>mkamnikbostjan@gmail.com</span>
+                    <span>dev@bostjankamnik.com</span>
                 </p>
                 <hr class="w3-opacity-max w3-border-black" />
                 <div class="contact-details-social">
