--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,7 +5,7 @@
     <title>Kamnik Boštjan</title>
 
     <meta name="title" content="Kamnik Boštjan">
-    <meta name="description" content="Frontend web developer from Slovenj Gradec, Slovenia. Developing websites for small businesses and individuals using the latest technologies.">
+    <meta name="description" content="Expereinced web developer">
     <meta name="keywords" content="web, web developer, frontend web developer, websites, website developer, sg, slovenj gradec, slovenia, small business, cheap website">
     <meta name="author" content="bkamnik">
     <meta name="language" content="English">
@@ -16,7 +16,7 @@
     <meta name="og:url" content="https://www.bostjankamnik.com" />
     <meta name="og:image" content="https://www.bostjankamnik.com/thumbnail.webp" />
     <meta name="og:description" content="Frontend web developer from Slovenj Gradec, Slovenia. Developing websites for small businesses and individuals using the latest technologies." />
-    <meta name="og:email" content="mkamnikbostjan@gmail.com" />
+    <meta name="og:email" content="dev@bostjankamnik.com" />
     <meta name="og:phone_number" content="+38640976333" />
     <meta name="og:postal-code" content="2360" />
     <meta name="og:country-name" content="Slovenia" />
