--- a/static/desktop.css
+++ b/static/desktop.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Barlow&family=Mulish&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Mulish&display=swap');
 
 h1,
 h2,
@@ -8,7 +8,7 @@ h5,
 h6,
 p,
 a {
-  font-family: "Barlow", sans-serif;
+  font-family: 'Barlow', sans-serif;
 }
 
 * {
@@ -41,31 +41,23 @@ body {
 }
 
 .nav-bg-img-wrapper img {
-  filter: grayscale();
+  filter: grayscale(100%);
   opacity: 0.15;
   object-fit: cover;
   width: 100%;
   height: 100%;
-  transition-property: opacity;
-  transition-duration: 0.25s;
-  transition-timing-function: cubic-bezier();
-}
+  transition-property: filter, opacity;
+  transition-duration: 0.25s, 0.4s;
+  transition-timing-function: cubic-bezier(0.5, 0, 1, 1), ease-in-out;
 
-.nav-item {
-  border-bottom: 6px solid #4a4a4a3b !important;
-  color: #4a4a4a8a;
-  font-weight: 700;
-  font-family: "Mulish", sans-serif;
-}
-
-.nav-item.nav-item-active {
-  color: #4a4a4a;
-  border-bottom: 6px solid #ffb602 !important;
+  
 }
 
 .bg-focused {
   filter: none !important;
   opacity: 0.45 !important;
+   
+
 }
 
 #header-primary {
@@ -73,7 +65,14 @@ body {
   animation-delay: 0.35s;
 }
 
-nav ul li .nav-item:hover {
+.nav-item a {
+  border-bottom: 6px solid #4a4a4a3b !important;
+  color: #4a4a4a8a;
+  font-weight: 700;
+  font-family: 'Mulish', sans-serif;
+}
+
+.nav-item:hover a {
   background-color: transparent !important;
 
   color: #4a4a4a;
@@ -81,8 +80,13 @@ nav ul li .nav-item:hover {
   position: relative;
 }
 
-nav ul li.w3-bar-item:hover .nav-item::before {
-  content: "";
+.nav-item.nav-item--active a {
+  color: #4a4a4a;
+  border-bottom: 6px solid #ffb602 !important;
+}
+
+.nav-item:hover::before {
+  content: '';
   display: block;
   position: absolute;
   z-index: -1;
@@ -212,7 +216,7 @@ nav ul li.w3-bar-item:hover .nav-item::before {
 /* --------------------------------- contact -------------------------------- */
 #portfolio::after {
   margin-top: 160px;
-  content: "";
+  content: '';
   display: block;
 }
 
@@ -255,7 +259,7 @@ nav ul li.w3-bar-item:hover .nav-item::before {
 .contact-container .bg-img {
   width: 100%;
   height: 100%;
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -360,7 +364,7 @@ p {
 }
 
 .page-wrap:after {
-  content: "";
+  content: '';
   display: block;
 }
 
