attach class to header

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -22,7 +22,7 @@
         </div>
     </nav>
 </header>
-<header id="header-primary" class="w3-hide-small w3-animate-top" style="position: relative;">
+<header id="header-primary" class="w3-hide-small w3-animate-top header" style="position: relative;">
     <div class="nav-bg-img-wrapper">
         <img src="/images/about/bricks-red.webp" alt="">
     </div>
