--- a/static/desktop.css
+++ b/static/desktop.css
@@ -49,15 +49,11 @@ body {
   transition-property: filter, opacity;
   transition-duration: 0.25s, 0.4s;
   transition-timing-function: cubic-bezier(0.5, 0, 1, 1), ease-in-out;
-
-  
 }
 
-.bg-focused {
-  filter: none !important;
-  opacity: 0.45 !important;
-   
-
+.header--infocus .nav-bg-img-wrapper img {
+  filter: none;
+  opacity: 0.45;
 }
 
 #header-primary {
