--- a/static/desktop.css
+++ b/static/desktop.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow&family=Mulish&display=swap');
 
+:root {
+  --light-yellow: #f5cf95;
+}
+
 h1,
 h2,
 h3,
@@ -62,16 +66,19 @@ body {
 }
 
 .nav-item a {
+  border-radius: 2px 2px 0 0;
   border-bottom: 6px solid #4a4a4a3b !important;
   color: #4a4a4a8a;
   font-weight: 700;
   font-family: 'Mulish', sans-serif;
 }
 
-.nav-item:hover a {
-  background-color: transparent !important;
-
+.header--infocus .nav-item a {
+  background-color: var(--light-yellow);
   color: #4a4a4a;
+}
+
+.nav-item:hover a {
   border-bottom: 6px solid #4a4a4a !important;
   position: relative;
 }
@@ -79,20 +86,6 @@ body {
 .nav-item.nav-item--active a {
   color: #4a4a4a;
   border-bottom: 6px solid #ffb602 !important;
-}
-
-.nav-item:hover::before {
-  content: '';
-  display: block;
-  position: absolute;
-  z-index: -1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #fff;
-  opacity: 0.75;
-  filter: blur(24px);
 }
 
 /* ------------------------------ bookmark side ----------------------------- */
