update background color

--- a/static/desktop.css
+++ b/static/desktop.css
@@ -259,7 +259,7 @@ body {
 }
 
 .contact-container .bg-color {
-  background-color: #fdcb35;
+  background-color: #ffe974;
   position: absolute;
   left: 0;
   top: 0;
