--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,50 +13,24 @@
     <div class="w3-padding-top-24 w3-hide-medium w3-hide-large"> </div>
     <div class="w3-container w3-content w3-section">
         <div class="w3-row">
-            <div id="about-text" class="w3-col m6">
+            <div id="about-text" class="m6">
                 <div class="web-dev-toggle-bookmark w3-animate-opacity w3-large">
                     <h2 class="no-space-top">Web Developer</h2>
                     <br/>
-                    <strong>Hi !</strong>
+                    <strong>Hi there</strong>
+                    <p>My name's Bostjan and I like to build things.</p>
                     <p>
-                        Having worked with computers for the larger part of my life, starting with video games I eventually went on to study computer science, where I learned programming.
+                        Having several years of experience in Front End development, I have worked on a variety of projects, from simple websites to complex web applications. I have a strong understanding of the web development process and I am proficient in a variety of programming languages and frameworks.
                     </p>
                     <p>
                         Equipped with a positive attitude and a 'can do' mentality, I like to use my skills to be creative and build useful things. I like to help others fulfill their ambitions and reach their goals.
                     </p>
                     <p>
-                        below are some of the projects I've worked on
+                        please see some of the projects I've worked on below
                     </p>
                 </div>
-                <!-- <div class="electronics-toggle-bookmark w3-animate-opacity w3-hide">
-                    <h2>Electronics</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum voluptatibus esse nesciunt consectetur vero eligendi! Fugit, quisquam exercitationem non delectus natus rem! Hic quam quaerat non, obcaecati placeat necessitatibus est
-                        voluptatum voluptates quasi doloremque dignissimos maiores ipsa in labore, sint eius totam recusandae temporibus explicabo dolorem qui nostrum reiciendis dolore?</p>
-                </div> -->
-            </div>
-            <div id="about-aside" class="w3-col m6 w3-hide-small">
-                <div class="img-wrapper">
-                    <img src="/images/about/laptop.webp" alt="laptop displaying phrase" class="img-about web-dev-toggle-bookmark w3-animate-opacity">
-                    <!-- <img src="" alt="" class="img-about w3-light-blue w3-hide electronics-toggle-bookmark w3-animate-opacity"> -->
-                    <img class="img-overlay-right" src="/images/decorative/paint-vert.webp" alt="decorative overlay">
-                </div>
-
-                <!-- about section navigation in case of more items than 1 -->
-                <!-- <nav class="w3-content w3-center">
-                    <ul class="w3-bar">
-                        <li class="w3-bar-item">
-                            <button class="w3-button" onclick="onSidebarNavClick(this)" data-toggle="web-dev" data-toggle-id="bookmark">Web Developer</button>
-                        </li>
-                        <li class="w3-bar-item ">
-                            <button class="w3-button" onclick="onSidebarNavClick(this)" data-toggle="electronics" data-toggle-id="bookmark">Electronics</button>
-                        </li>
-                        <li class="w3-bar-item ">
-                        </li>
-                        <li class="w3-bar-item ">
-                        </li>
-                    </ul>
-                </nav> -->
-            </div>
+gi            </div>
+           
         </div>
     </div>
 </section>
